Add Images and index changes

--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -8,8 +8,11 @@
   </head>
   <body>
     <div class="top_container">
+      <img src="images/cloud.png" alt="cloud-img">
       <h1>Dmitri is the name.</h1>
-      <p>WebDev is the game.</p>
+      <p>Web<span class="dev">Dev</span> is the game.</p>
+      <img src="images/cloud.png" alt="cloud-img">
+      <img src="images/mountain.png" alt="mountain-img">
     </div>
 
     <div class="middle_container">
